--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.6",
+    "@babel/preset-react": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
@@ -50,6 +54,7 @@
     "jest": "^30.2.0",
     "jest-expo": "^54.0.16",
     "prettier": "^3.7.4",
+    "react-dom": "^19.1.0",
     "react-test-renderer": "^19.2.3",
     "typescript": "~5.9.2"
   },
