--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "expo": "~54.0.31",
+    "expo-asset": "~12.0.12",
+    "expo-file-system": "~19.0.21",
     "expo-location": "^19.0.8",
     "expo-sensors": "^15.0.8",
     "expo-sqlite": "^16.0.10",
@@ -41,11 +43,13 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/react-native": "^13.3.3",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
     "babel-jest": "^30.2.0",
+    "better-sqlite3": "^12.6.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
@@ -56,6 +60,7 @@
     "prettier": "^3.7.4",
     "react-dom": "^19.1.0",
     "react-test-renderer": "^19.2.3",
+    "shapefile": "^0.6.6",
     "typescript": "~5.9.2"
   },
   "private": true
