--- a/package.json
+++ b/package.json
@@ -16,21 +16,28 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "validate:recipes": "tsx src/scripts/validateRecipes.ts",
-    "validate": "npm run typecheck && npm run lint && npm run test && npm run validate:recipes"
+    "doctor": "npx expo-doctor",
+    "deps:check": "npx expo install --check",
+    "validate": "npm run typecheck && npm run lint && npm run format:check && npm run test && npm run validate:recipes && npm run doctor && npm run deps:check"
   },
   "dependencies": {
+    "@kingstinct/react-native-healthkit": "^13.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "expo": "~54.0.31",
     "expo-asset": "~12.0.12",
+    "expo-build-properties": "^1.0.10",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
+    "expo-health-connect": "^0.1.1",
     "expo-location": "^19.0.8",
     "expo-sensors": "^15.0.8",
     "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-health-connect": "^3.5.0",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.16.0"
@@ -44,22 +51,22 @@
     "@testing-library/react": "^16.3.1",
     "@testing-library/react-native": "^13.3.3",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
-    "babel-jest": "^30.2.0",
+    "babel-jest": "~29.7.0",
     "better-sqlite3": "^12.6.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
-    "jest": "^30.2.0",
+    "jest": "~29.7.0",
     "jest-expo": "^54.0.16",
     "prettier": "^3.7.4",
     "react-dom": "^19.1.0",
-    "react-test-renderer": "^19.2.3",
+    "react-test-renderer": "~19.1.0",
     "shapefile": "^0.6.6",
     "typescript": "~5.9.2"
   },
