Balance: Add balance validation script to test progression.
Currently it's too slow in a number of areas;
this is going to want to be sped up soon with more useful tools.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Validate display constraints
         run: npm run validate:display
 
+      - name: Validate game balance
+        run: npm run validate:balance
+
       - name: Run Expo doctor
         run: npm run doctor
 
