--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
-    "expo": "~54.0.32",
+    "@sentry/react-native": "~7.2.0",
+    "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
     "expo-build-properties": "^1.0.10",
+    "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
     "expo-health-connect": "^0.1.1",
@@ -84,7 +86,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "~29.7.0",
-    "jest-expo": "^54.0.16",
+    "jest-expo": "~54.0.17",
     "prettier": "^3.7.4",
     "react-dom": "^19.1.0",
     "react-test-renderer": "~19.1.0",
